loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: not found: value FacingWall
while(!FacingWall()){
       ^