loopfor.LoopStairs.scala.code
while(!FacingWall()){
  forward();
};{
  left();
  forward();
}